# trmsg

./: .env.example  .gitignore  .si.json  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
cli/: config.py  main.py
cli/commands/: auth.py  social.py
cli/network/: client.py
cli/ui/: chat_ui.py  theme.py
server/: config.py  main.py
server/ai/: gemini.py
server/api/: endpoints.py
server/auth/: auth.py
server/database/: db.py
server/games/: engine.py
server/websocket/: manager.py
